drrx/fixtures/invalid/invalid-tabs.tree.drrx
	.                        # EXPECTED ERROR: SP.01 tabs disallowed; root also must be column 1 (SP.06)
